--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -14,7 +14,7 @@ steps:
 
 - id: 'Copiando .env'
   name: 'gcr.io/cloud-builders/docker'
-  args: ['exec', '-t', 'laravel', '.env.example', '.env']
+  args: ['exec', '-t', 'laravel', 'cp', '.env.example', '.env']
 
 - id: 'Rodando key:generate'
   name: 'gcr.io/cloud-builders/docker'
